--- a/src/main/resources/assets/modforlazypeople/lang/en_uk.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_uk.json
@@ -3,6 +3,8 @@
   "mflp.macroConfigScreen.title": "Macro Configurator",
   "mflp.updateScreen.title": "Update Available",
   "mflp.settingsScreen.title": "MFLP Settings",
+  "mflp.autoReplyScreen.title": "Auto Reply config",
+  "mflp.autoReplyConfigScreen.title": "Auto reply settings",
 
   "mflp.category.configCategory": "Config",
   "mflp.category.hotkeyCategory": "Hotkeys",
