--- a/src/main/resources/assets/modforlazypeople/lang/en_uk.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_uk.json
@@ -9,17 +9,6 @@
   "mflp.category.configCategory": "Config",
   "mflp.category.hotkeyCategory": "Hotkeys",
 
-  "mflp.categoryEntry.tickFreezeToggle": "Toggle better tick freeze",
-  "mflp.categoryEntry.tickFreezeKeybind": "Toggle tick freeze key",
-  "mflp.categoryEntry.tickStepKeybind": "Tick stepping key",
-  "mflp.categoryEntry.setupWorldKeybind": "World setup key",
-
-
-  "mflp.tooltip.tickFreezeToggle": "A toggle for better tick freeze",
-  "mflp.tooltip.tickFreezeKey": "The hotkey for toggling tick freeze",
-  "mflp.tooltip.tickStepKey": "The hotkey for tick stepping",
-  "mflp.tooltip.worldSetupKey": "The hotkey for auto setting gamerules and a few others",
-
   "mflp.tooltip.autoPlotHome": "Automatically does /plot home, when joining synergy",
   "mflp.tooltip.autoWbBlacklist": "A toggle for auto welcome back blacklist",
   "mflp.tooltip.autoWbWhitelist": "A toggle for auto welcome back whitelist",
@@ -34,10 +23,11 @@
   "mflp.keybind.tickStep": "Tick step",
   "mflp.keybind.setupWorld": "World setup",
 
-  "mflp.keybindCategory.MFLP": "MFLP",
+  "mflp.keybindCategory.macro": "Macro Keybinds",
 
   "mflp.configScreen.removeButton": "Remove",
   "mflp.configScreen.editButton": "Edit",
 
-  "mflp.keybinding.undefined": "Undefined (Prolly an error)"
+  "mflp.keybinding.undefined": "Undefined (Prolly an error)",
+  "mflp.keybinding.defaultKey": "Not bound"
 }
