Added a file version setting for future updates Reworked a few things, just some random stuffs

--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -5,6 +5,7 @@
   "mflp.settingsScreen.title": "MFLP Settings",
   "mflp.autoReplyScreen.title": "Auto Reply config",
   "mflp.autoReplyConfigScreen.title": "Auto reply settings",
+  "mflp.playerBlacklistScreen.title": "Auto welcome back player blacklist screen",
 
   "mflp.category.configCategory": "Config",
   "mflp.category.hotkeyCategory": "Hotkeys",
