Fixed a issue with scrollable widgets, added a custom messages per server screen and list, working on impl for auto welcome back

--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -6,6 +6,7 @@
   "mflp.autoReplyScreen.title": "Auto Reply config",
   "mflp.autoReplyConfigScreen.title": "Auto reply settings",
   "mflp.playerBlacklistScreen.title": "Auto welcome back player blacklist screen",
+  "mflp.messagePerServer.title": "Custom messages per server screen",
 
   "mflp.category.configCategory": "Config",
   "mflp.category.hotkeyCategory": "Hotkeys",
