Translate to Danish + few fixes

--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -7,12 +7,12 @@
   "mflp.welcomeScreen.line4": "Dashes = spaces, and the dot separates commands.",
   "mflp.welcomeScreen.line5": "For removing macros, use /macro removeMacro <macro name>",
   "mflp.welcomeScreen.line6": "If your macro uses a space in its name replace it with a dash",
-  "mflp.welcomeScreen.line7": "If you want to request new features message me on discord",
+  "mflp.welcomeScreen.line7": "If you want to request new features message one of us on discord",
   "mflp.welcomeScreen.line8": "As of update 2.5.0, you can use the \"create\" button to add macros",
   "mflp.welcomeScreen.quickGuide.title": "Mflp Quick Guide",
 
-  "mflp.true": "True",
-  "mflp.false": "False",
+  "mflp.true": "On",
+  "mflp.false": "Off",
   "mflp.create": "Create",
   "mflp.openScreen": "Open screen",
   "mflp.add": "Add",
@@ -98,7 +98,7 @@
   "mflp.customMessagesPerServer.instructions": "To use the RegEx for usernames, type in \"%u\".",
   "mflp.customMessagesPerServer.validRegex": "Valid RegEx.",
   "mflp.customMessagesPerServer.invalidRegex": "Invalid RegEx: %s.",
-  "mflp.customMessagesPerServer.noCustomMessages": "No custom messages set!",
+  "mflp.customMessagesPerServer.noCustomMessages": "No custom messages made!",
   "mflp.customMessagesPerServer.server": "Server",
   "mflp.customMessagesPerServer.joinRegexTitle": "Join Message (RegEx)",
   "mflp.customMessagesPerServer.unAfkRegexTitle": "Unafk Message (RegEx)",
