Finished polish translations

--- a/src/main/resources/assets/modforlazypeople/lang/pl_pl.json
+++ b/src/main/resources/assets/modforlazypeople/lang/pl_pl.json
@@ -1,107 +1,107 @@
 {
   "mflp.welcomeScreen.welcomeText": "Witaj w MFLP",
-  "mflp.welcomeScreen.line1": "Mflp is a mod for creating command macros, and adding QOL features. MFLP jest modem, do tworzenia ",
-  "mflp.welcomeScreen.line2": "To create a macro run the command: ",
-  "mflp.welcomeScreen.command": "/macro createMacro <macro name> <commands>",
-  "mflp.welcomeScreen.line3": "the commands syntax is as follows: say-hi.say-hi-2",
-  "mflp.welcomeScreen.line4": "Dashes = spaces, and the dot separates commands.",
-  "mflp.welcomeScreen.line5": "For removing macros, use /macro removeMacro <macro name>",
-  "mflp.welcomeScreen.line6": "If your macro uses a space in its name replace it with a dash",
-  "mflp.welcomeScreen.line7": "If you want to request new features message one of us on discord",
-  "mflp.welcomeScreen.line8": "As of update 2.5.0, you can use the \"create\" button to add macros",
+  "mflp.welcomeScreen.line1": "MFLP jest modem, do tworzenia skrótów klawiszowych dla komend, jak i pomocnych funkcji.",
+  "mflp.welcomeScreen.line2": "Aby stworzyć skrót wykonaj polecenie: ",
+  "mflp.welcomeScreen.command": "/macro createMacro <nazwa> <polecenie>",
+  "mflp.welcomeScreen.line3": "Składnia komendy wygląda w następujący sposób: say-hi.say-hi-2",
+  "mflp.welcomeScreen.line4": "Myślniki zastępują spacje, a kropka oddziela polecenia.",
+  "mflp.welcomeScreen.line5": "Aby usunąć skrót, wykonaj polecenie: /macro removeMacro <macro name>",
+  "mflp.welcomeScreen.line6": "Jeżeli nazwa twojego skrótu zawiera spację, zamień ją na myślnik.",
+  "mflp.welcomeScreen.line7": "Jeżeli chciałbyś zaproponować nową funkcje napisz na discordzie.",
+  "mflp.welcomeScreen.line8": "Od wersji 2.5.0 można używać przycisku \"Stwórz\" aby dodać skruty w menu.",
   "mflp.welcomeScreen.quickGuide.title": "Mflp Quick Guide",
 
-  "mflp.true": "On",
-  "mflp.false": "Off",
-  "mflp.create": "Create",
-  "mflp.openScreen": "Open screen",
-  "mflp.add": "Add",
-  "mflp.remove": "Remove",
-  "mflp.rename": "Rename",
-  "mflp.duplicate": "Duplicate",
-  "mflp.name": "Name",
+  "mflp.true": "Włączone",
+  "mflp.false": "Wyłączone",
+  "mflp.create": "Stwórz",
+  "mflp.openScreen": "Otwórz ekran",
+  "mflp.add": "Dodaj",
+  "mflp.remove": "Usuń",
+  "mflp.rename": "Zmień nazwę",
+  "mflp.duplicate": "Duplikuj",
+  "mflp.name": "Nazwa",
 
-  "mflp.mainConfig.macrosButton": "Macros",
-  "mflp.mainConfig.settingsButton": "Settings",
-  "mflp.mainConfig.autoReplyButton": "Auto Reply",
+  "mflp.mainConfig.macrosButton": "Skróty",
+  "mflp.mainConfig.settingsButton": "Ustawienia",
+  "mflp.mainConfig.autoReplyButton": "Auto Odpowiedzi",
 
   "mflp.setting.autoWb.name": "Auto welcome back",
-  "mflp.setting.autoWb.tooltip": "Automatically says wb when someone comes back from being afk or joins synergy.",
+  "mflp.setting.autoWb.tooltip": "Automatycznie mówi przywitanie kiedy ktoś dołącza do serwera lub wraca do gry.",
 
   "mflp.setting.autoWelcome.name": "Auto welcome",
-  "mflp.setting.autoWelcome.tooltip": "Automatically says welcome! when a new person joins synergy",
+  "mflp.setting.autoWelcome.tooltip": "Automatycznie mówi welcome! kiedy nowa osoba dołącza do serweru.",
 
-  "mflp.setting.autoWbRank.name": "Auto WB rank setting",
-  "mflp.setting.autoWbRank.tooltip": "Rank filter for auto wb",
-  "mflp.setting.autoWbRank.everyone": "Everyone",
+  "mflp.setting.autoWbRank.name": "Auto WB filter rangi",
+  "mflp.setting.autoWbRank.tooltip": "Filter rangi dla Autogo WB",
+  "mflp.setting.autoWbRank.everyone": "Wszyscy",
   "mflp.setting.autoWbRank.memberPlus": "Member +",
   "mflp.setting.autoWbRank.devotedPlus": "Devoted +",
   "mflp.setting.autoWbRank.trustedPlus": "Trusted +",
 
-  "mflp.setting.autoWbDelay.name": "Auto welcome back delay",
-  "mflp.setting.autoWbDelay.tooltip": "How long the bot should wait before saying wb after someone joins in GAME TICKS",
+  "mflp.setting.autoWbDelay.name": "Auto welcome back opóźnienie",
+  "mflp.setting.autoWbDelay.tooltip": "Jak długo zanim bot odpowie WB po dołączeniu osoby w GAME TICK-ach",
 
-  "mflp.setting.wbMessage.name": "Welcome back message",
-  "mflp.setting.wbMessage.tooltip": "What message auto welcome back should say. Use %p to say the username of the player that joined.",
+  "mflp.setting.wbMessage.name": "Wiadomość do auto wb",
+  "mflp.setting.wbMessage.tooltip": "Co bot powinien odpowiedzieć. Wpisz %p, aby bot napisał imie osoby, która dołączyła.",
 
-  "mflp.setting.welcomeMessage.name": "Welcome message",
-  "mflp.setting.welcomeMessage.tooltip": "What message auto welcome should say. Use %p to say the username of the player that joined.",
+  "mflp.setting.welcomeMessage.name": "Wiadomość do auto welcome",
+  "mflp.setting.welcomeMessage.tooltip": "Jaką wiadomość powinien bot wysłać, kiedy osoba dołącza poraz pierwszy. Użyj %p, aby bot napisał imię osoby, która dołączyła,",
 
   "mflp.setting.autoWbCooldown.name": "Auto welcome back cooldown",
-  "mflp.setting.autoWbCooldown.tooltip": "The cooldown between the bot saying wb in seconds",
+  "mflp.setting.autoWbCooldown.tooltip": "Czas odnowienia między botem mówiącym wb w sekundach.",
 
   "mflp.setting.autoWbFilter.name": "Auto wb filter",
-  "mflp.setting.autoWbFilter.tooltip": "A switch between no filter, a whitelist filter, and a blacklist",
+  "mflp.setting.autoWbFilter.tooltip": "Zmienia pomiędzy: żadnym, whitelistą i blacklistą",
   "mflp.setting.autoWbFilter.none": "None",
-  "mflp.setting.autoWbFilter.whitelist": "Whitelist",
-  "mflp.setting.autoWbFilter.blacklist": "Blacklist",
+  "mflp.setting.autoWbFilter.whitelist": "Whitelista",
+  "mflp.setting.autoWbFilter.blacklist": "Blacklista",
 
   "mflp.setting.autoWbWhitelist.name": "Auto welcome back whitelist",
-  "mflp.setting.autoWbWhitelist.tooltip": "The list of names to say wb to when using auto wb, separated by a space",
+  "mflp.setting.autoWbWhitelist.tooltip": "Lista osób, którym bot będzie mówił wb, oddzielana przez spację.",
 
   "mflp.setting.autoWbBlacklist.name": "Auto welcome back blacklist",
-  "mflp.setting.autoWbBlacklist.tooltip": "The list of names to ignore people when using auto wb, separated by a space",
+  "mflp.setting.autoWbBlacklist.tooltip": "Lista osób, którym bot nie będzie mówił wb, oddzielana przez spację.",
 
   "mflp.setting.playerNameWbBlacklist.name": "Player name wb blacklist",
-  "mflp.setting.playerNameWbBlacklist.tooltip": "Stops the player from mentioning specific names when using %p",
+  "mflp.setting.playerNameWbBlacklist.tooltip": "Nie mówi nazwy gracza dla ustalonych osób, podczas używania %p",
 
-  "mflp.setting.autoIgnoreWb.name": "Auto Ignore wb",
-  "mflp.setting.autoIgnoreWb.tooltip": "Automatically ignore messages containing wb within a few seconds of someone joining",
+  "mflp.setting.autoIgnoreWb.name": "Auto ignorowanie wb",
+  "mflp.setting.autoIgnoreWb.tooltip": "Automatycznie ignoruje wysłane przez gracza wiadomości z wb.",
 
-  "mflp.setting.autoIgnoreWbDuration.name": "Auto Ignore wb Duration",
-  "mflp.setting.autoIgnoreWbDuration.tooltip": "The duration that your messages containing wb will be ignored.",
+  "mflp.setting.autoIgnoreWbDuration.name": "Auto ignorowanie wb opóźnienie",
+  "mflp.setting.autoIgnoreWbDuration.tooltip": "Jak długo po dołączeniu osoby, powinien ignorować wiadomości z wb.",
 
-  "mflp.setting.perPlayerMessages.name": "Per player messages",
-  "mflp.setting.perPlayerMessages.tooltip": "Opens the custom message per player menu. Warning this IS case sensitive",
+  "mflp.setting.perPlayerMessages.name": "Wiadomości dla pojedyńczych osób",
+  "mflp.setting.perPlayerMessages.tooltip": "Otwiera menu, w którym można ustawić wiadomości dla pojedyńczych osób. Uwaga, wielkość liter ma znaczenie!",
 
-  "mflp.setting.customServerMessages.name": "Custom server messages",
-  "mflp.setting.customServerMessages.tooltip": "Opens the screen where you can modify the server join/afk messages.",
+  "mflp.setting.customServerMessages.name": "Wiadomości od serwera",
+  "mflp.setting.customServerMessages.tooltip": "Otwiera menu, gdzie można ustawić do jakich wiadomości auto wb bedzie reagował dla danego serwera.",
 
-  "mflp.macroSettings.addCommandButton": "Add Command",
-  "mflp.macroSettings.command": "Command",
-  "mflp.macro.noMacrosAdded": "No Macros Added!",
+  "mflp.macroSettings.addCommandButton": "Dodaj komendę.",
+  "mflp.macroSettings.command": "Komęda.",
+  "mflp.macro.noMacrosAdded": "Brak skrótów!",
 
-  "mflp.autoReply.noAutoRepliesAdded": "No Auto Replies Added!",
-  "mflp.autoReplyConfigScreen.keywords": "Keywords",
-  "mflp.autoReplyConfigScreen.replies": "Replies",
-  "mflp.autoReplyConfigScreen.keyword": "Keyword",
-  "mflp.autoReplyConfigScreen.reply": "Reply",
-  "mflp.autoReplyConfigScreen.replies.tooltip": "Here, you add replies. To execute a command add a / before the command, to only say the message type it without the slash.",
-  "mflp.autoReplyConfigScreen.keywords.tooltip": "Here, you add messages, that the auto reply bot should reply to.",
+  "mflp.autoReply.noAutoRepliesAdded": "Brak automatycznych odpowiedzi!",
+  "mflp.autoReplyConfigScreen.keywords": "Słowa klucz",
+  "mflp.autoReplyConfigScreen.replies": "Odpowiedzi",
+  "mflp.autoReplyConfigScreen.keyword": "Słowo klucz",
+  "mflp.autoReplyConfigScreen.reply": "Odpowiedź",
+  "mflp.autoReplyConfigScreen.replies.tooltip": "Dodajesz tutaj odpowiedzi. Aby wykonać polecenie, dodaj / przed poleceniem. Aby tylko wysłać wiadomość nie dodawaj ukośnika.",
+  "mflp.autoReplyConfigScreen.keywords.tooltip": "Tutaj dodajesz słowa klucz, na które automatyczne odpowiedzi będą reagować.",
 
-  "mflp.customPlayerMessages.title": "Custom player messages",
-  "mflp.customPlayerMessages.player": "Player",
-  "mflp.customPlayerMessages.message": "Message",
-  "mflp.customPlayerMessages.noMessagesSet": "No custom messages made!",
+  "mflp.customPlayerMessages.title": "Wiadomości dla danego gracza.",
+  "mflp.customPlayerMessages.player": "Gracz",
+  "mflp.customPlayerMessages.message": "Wiadomość",
+  "mflp.customPlayerMessages.noMessagesSet": "Brak wiadomości.",
 
-  "mflp.customMessagesPerServer.title": "Custom server join messages",
-  "mflp.customMessagesPerServer.instructions": "To use the RegEx for usernames, type in \"%u\".",
-  "mflp.customMessagesPerServer.validRegex": "Valid RegEx.",
-  "mflp.customMessagesPerServer.invalidRegex": "Invalid RegEx: %s.",
-  "mflp.customMessagesPerServer.noCustomMessages": "No custom messages made!",
-  "mflp.customMessagesPerServer.server": "Server",
-  "mflp.customMessagesPerServer.joinRegexTitle": "Join Message (RegEx)",
-  "mflp.customMessagesPerServer.unAfkRegexTitle": "Unafk Message (RegEx)",
-  "mflp.customMessagesPerServer.defaultJoinRegexTitle": "Default Join Message (RegEx)",
-  "mflp.customMessagesPerServer.defaultUnAfkRegexTitle": "Default Unafk Message (RegEx)"
+  "mflp.customMessagesPerServer.title": "Wiadomość serwera, kiedy gracz dołącza.",
+  "mflp.customMessagesPerServer.instructions": "Aby użyć RegEx dla nazwy gracza, wpisz %u",
+  "mflp.customMessagesPerServer.validRegex": "Poprawny RegEx.",
+  "mflp.customMessagesPerServer.invalidRegex": "Niepoprawny RegEx: %s.",
+  "mflp.customMessagesPerServer.noCustomMessages": "Brak wiadomości",
+  "mflp.customMessagesPerServer.server": "Serwer",
+  "mflp.customMessagesPerServer.joinRegexTitle": "Wiadomość dołączenia (RegEx)",
+  "mflp.customMessagesPerServer.unAfkRegexTitle": "Wiadomość unafk (RegEx)",
+  "mflp.customMessagesPerServer.defaultJoinRegexTitle": "Domyślna wiadomość dołączenia (RegEx)",
+  "mflp.customMessagesPerServer.defaultUnAfkRegexTitle": "Domyślna wiadomość unafk (RegEx)"
 }
