--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -68,7 +68,7 @@
   "mflp.setting.autoIgnoreWb.name": "Auto Ignore wb",
   "mflp.setting.autoIgnoreWb.tooltip": "Automatically ignore messages containing wb within a few seconds of someone joining",
 
-  "mflp.setting.autoIgnoreWbDuration.name": "Auto Ignore wb Duration",
+  "mflp.setting.autoIgnoreWbDuration.name": "Auto Ignore wb duration",
   "mflp.setting.autoIgnoreWbDuration.tooltip": "The duration that your messages containing wb will be ignored.",
 
   "mflp.setting.perPlayerMessages.name": "Per player messages",
