Add notice that the bot can't send wb messages within autoIgnoreWb

--- a/src/main/resources/assets/modforlazypeople/lang/de_de.json
+++ b/src/main/resources/assets/modforlazypeople/lang/de_de.json
@@ -66,7 +66,7 @@
   "mflp.setting.playerNameWbBlacklist.tooltip": "Stops the player from mentioning specific names when using %p",
 
   "mflp.setting.autoIgnoreWb.name": "Auto Ignore wb",
-  "mflp.setting.autoIgnoreWb.tooltip": "Automatically ignore messages containing wb within a few seconds of someone joining",
+  "mflp.setting.autoIgnoreWb.tooltip": "Automatically ignore messages containing wb within a few seconds of someone joining. NOTE: The bot also can't send wb messages within the duration.",
 
   "mflp.setting.autoIgnoreWbDuration.name": "Auto Ignore wb Duration",
   "mflp.setting.autoIgnoreWbDuration.tooltip": "The duration that your messages containing wb will be ignored.",
