--- a/src/main/resources/assets/modforlazypeople/lang/da_dk.json
+++ b/src/main/resources/assets/modforlazypeople/lang/da_dk.json
@@ -66,7 +66,7 @@
   "mflp.setting.playerNameWbBlacklist.tooltip": "Stopper botten fra at sige specifikke navne ved hjælp af %p.",
 
   "mflp.setting.autoIgnoreWb.name": "Automatisk Ignorer wb",
-  "mflp.setting.autoIgnoreWb.tooltip": "Ignorerer automatisk beskeder med wb i sig inden for et par sekunder af at nogen har tilsluttet sig.",
+  "mflp.setting.autoIgnoreWb.tooltip": "Ignorerer automatisk beskeder med wb i sig inden for et par sekunder af at nogen har tilsluttet sig. BEMÆRK: botten kan heller ikke sende beskeder med wb i den tid.",
 
   "mflp.setting.autoIgnoreWbDuration.name": "Automatisk Ignorer wb Varighed",
   "mflp.setting.autoIgnoreWbDuration.tooltip": "Varigheden dine beskeder som indeholder wb vil blive ignoreret i.",
