--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -124,7 +124,8 @@
   "mflp.party.removingPlayer": "Removing %s from the party...",
   "mflp.party.infoTitle": "PARTY INFORMATION:",
   "mflp.party.infoOwner": "Owner: %s",
-  "mflp.party.infoMembers": "Members:",
+  "mflp.party.moderators": "Moderators:",
+  "mflp.party.members": "Members:",
   "mflp.party.playerJoined": "%s has joined the party!",
   "mflp.party.playerRemoved": "%s was removed from the party!",
   "mflp.party.playerLeft": "%s has left the party!",
@@ -132,7 +133,11 @@
   "mflp.party.clientInvited.description": "Use /party accept or /party decline to accept or decline the invite!",
   "mflp.party.playerInvited": "%s was invited to the party!",
   "mflp.party.clientRemoved.title": "You were removed from the party!",
+  "mflp.party.screen.title": "Manage Party",
+  "mflp.party.screen.ownership": "%s's party",
 
   "mflp.party.error.timeout": "ERROR: Connection was timed out!",
-  "mflp.party.error.notInParty": "ERROR: You're not in a party!"
+  "mflp.party.error.notInParty": "ERROR: You're not in a party!",
+  "mflp.party.failedToInvite.title": "Failed to invite %s",
+  "mflp.party.failedToInvite.description": "This could be because the MFLP servers are down, \nthe player is not online, or the player doesn't have MFLP installed."
 }
